--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="header">
+      <h1>DevelopMe, using AI for project ideas</h1>
+      <p>Just follow the directions below and find your next project</p>
+    </div>
     <div id="app">
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="I'm looking for a [TYPE OF] coding project in [LOCATION 1], [LOCATION 2]"></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Type a language/framework, or a few, for project ideas"></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
